--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,9 @@
   <title>Grievance Management Portal</title>
 
   <link href="css/styles.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
     <body id="page-top">
@@ -26,7 +25,6 @@
             <!-- Sidebar -->
             <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-                <!-- Sidebar - Brand -->
                 <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                     <div class="sidebar-brand-text mx-3">SHAHI</div>
                 </a>
@@ -47,7 +45,6 @@
 
                 <!-- Divider -->
                 <hr class="sidebar-divider">
-
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">
                         <i class="bi bi-file-earmark-text"></i>
@@ -92,29 +89,15 @@
 
                         <!-- Sidebar Toggle (Topbar) -->
                         <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                            <i class="fa fa-bars"></i>
+                            <i class="bi bi-list"></i>
                         </button>
-
-                        <!-- Topbar Search -->
-                        <form
-                            class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                            <div class="input-group">
-
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button">
-                                        <i class="fas fa-search fa-sm"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
 
                         <!-- Topbar Navbar -->
                         <ul class="navbar-nav ml-auto">
 
                             <!-- Nav Item - User Information -->
                             <li class="nav-item dropdown no-arrow">
-                                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link" href="#" role="button">
                                     <span class="mr-2 d-none d-lg-inline text-gray-600 small">Abhinav Kashyap</span>
                                     <img class="img-profile rounded-circle"
                                         src="img/undraw_profile.svg">
@@ -134,15 +117,15 @@
                         <!-- Content Row -->
                         <div class="row">
 
-                          <!-- Earnings (Monthly) Card Example -->
-                          <div class="col-xl-3 col-md-6 mb-4 ">
-                              <div class="card border-left-success shadow h-100 py-2">
+
+                          <div class="col-xl-4 col-md-4 mb-4 ">
+                              <div class="card shadow h-100 py-2 bg-success bg-gradient">
                                   <div class="card-body">
                                       <div class="row no-gutters align-items-center">
                                           <div class="col mr-2">
-                                              <div class="text-lg font-weight-bold text-success mb-1">
+                                              <div class="text-lg font-weight-bold text-white mb-1">
                                                   Case Upload</div>
-                                              <button type="button" class="btn btn-success">Generate</button>
+                                              <button type="button" class="btn btn-outline-light">Generate</button>
                                               <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                           </div>
                                           <div class="col-auto">
@@ -154,15 +137,15 @@
                           </div>
 
 
-                          <!-- Earnings (Monthly) Card Example -->
-                          <div class="col-xl-3 col-md-6 mb-4">
-                              <div class="card border-left-primary shadow h-100 py-2">
+
+                          <div class="col-xl-4 col-md-4 mb-4">
+                              <div class="card shadow h-100 py-2 bg-primary bg-gradient">
                                   <div class="card-body">
                                       <div class="row no-gutters align-items-center">
                                           <div class="col mr-2">
-                                              <div class="text-lg font-weight-bold text-primary mb-1">
+                                              <div class="text-lg font-weight-bold text-light mb-1">
                                                   Generate Report </div>
-                                              <button type="button" class="btn btn-primary">Generate</button>
+                                              <button type="button" class="btn btn-outline-light">Generate</button>
                                               <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                           </div>
                                           <div class="col-auto">
@@ -174,15 +157,15 @@
                           </div>
 
 
-                            <div class="col-xl-3 col-md-6 mb-4">
-                                <div class="card border-left-warning shadow h-100 py-2">
+                            <div class="col-xl-4 col-md-4 mb-4">
+                                <div class="card shadow h-100 py-2 bg-warning bg-gradient">
                                     <div class="card-body">
                                         <div class="row no-gutters align-items-center">
                                             <div class="col mr-2">
-                                                <div class="text-lg font-weight-bold text-warning mb-1">
+                                                <div class="text-lg font-weight-bold text-light mb-1">
                                                     Broadcast Message</div>
 
-                                                <button type="button" class="btn btn-warning">Broadcast</button>
+                                                <button type="button" class="btn btn-outline-light">Broadcast</button>
                                                 <div class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                             </div>
                                             <div class="col-auto">
@@ -193,8 +176,35 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-6 mb-4">
+                            <div class= "col shadow  bg-white rounded">
+                              <button class="btn border-bottom-primary p-3" onclick="toggle-table()">New/Unread Cases</button>
+                              <button class="btn p-3" onclick="toggle-table()">Outstanding and Closed Cases</button>
 
+                              <button class="btn btn-outline-primary " onclick="Filterfn()"> Filter
+                                <i class="bi bi-sliders"></i>
+                              </button>
+
+                              <div class="table-responsive-lg">
+                              <table class="table table-hover" id='mytable'>
+                                <!-- HEADING FORMATION -->
+                                <tr>
+                                  <th>Case No</th>
+                                  <th>Branch</th>
+                                  <th>Reporting Method</th>
+                                  <th>Date</th>
+                                  <th>Time</th>
+                                  <th>Category</th>
+                                  <th>Sub-Category</th>
+                                  <th>Priority</th>
+                                  <th>Nature</th>
+                                  <th>Case Manager</th>
+                                  <th>Case Reporter</th>
+                                  <th>Case Status</th>
+                                </tr>
+                                <tr>
+
+                              </tr>
+                            </div>
                             </div>
                         </div>
 
@@ -204,15 +214,6 @@
                 </div>
                 <!-- End of Main Content -->
 
-                <!-- Footer -->
-                <footer class="sticky-footer bg-white">
-                    <div class="container my-auto">
-                        <div class="copyright text-center my-auto">
-                            <span>Copyright &copy;</span>
-                        </div>
-                    </div>
-                </footer>
-                <!-- End of Footer -->
 
             </div>
             <!-- End of Content Wrapper -->
@@ -222,14 +223,13 @@
 
         <!-- Scroll to Top Button-->
         <a class="scroll-to-top rounded" href="#page-top">
-            <i class="fas fa-angle-up"></i>
+            <i class="bi bi-caret-up"></i>
         </a>
 
-        <!-- Logout Modal-->
 
         <!-- Bootstrap core JavaScript-->
         <script src="vendor/jquery/jquery.min.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 
         <!-- Core plugin JavaScript-->
         <script src="Js/jquery.easing.min.js"></script>
