--- a/public/index.html
+++ b/public/index.html
@@ -95,9 +95,9 @@
                         <!-- Topbar Navbar -->
                         <ul class="navbar-nav ml-auto">
 
-                            <!-- Nav Item - User Information -->
+                            <!-- Nav Item -User Information -->
                             <li class="nav-item dropdown no-arrow">
-                                <a class="nav-link" href="#" role="button">
+                                <a class="nav-link" href="#" >
                                     <span class="mr-2 d-none d-lg-inline text-gray-600 small">Abhinav Kashyap</span>
                                     <img class="img-profile rounded-circle"
                                         src="img/undraw_profile.svg">
